<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bStop"
        android:layout_width="99dp"
        android:layout_height="81dp"
        android:text="@string/stop"
        android:backgroundTint="#0000FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bBack"
        android:layout_width="101dp"
        android:layout_height="114dp"
        android:text="@string/backwards"
        android:backgroundTint="#0000FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bStop"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/bLeft"
        android:layout_width="107dp"
        android:layout_height="78dp"
        android:text="@string/left"
        android:backgroundTint="#0000FF"
        app:layout_constraintBottom_toBottomOf="@+id/bStop"
        app:layout_constraintEnd_toStartOf="@+id/bStop"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bStop"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bRight"
        android:layout_width="108dp"
        android:layout_height="74dp"
        android:text="@string/right"
        android:backgroundTint="#0000FF"
        app:layout_constraintBottom_toBottomOf="@+id/bStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toEndOf="@+id/bStop"
        app:layout_constraintTop_toTopOf="@+id/bStop"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/bForward"
        android:layout_width="98dp"
        android:layout_height="113dp"
        android:text="@string/forward"
        android:backgroundTint="#0000FF"
        app:layout_constraintBottom_toTopOf="@+id/bStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

</androidx.constraintlayout.widget.ConstraintLayout>