<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".System1Activity">

    <ImageButton
        android:id="@+id/bConexion"
        android:layout_width="82dp"
        android:layout_height="105dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="281dp"
        android:layout_marginBottom="622dp"
        android:background="#808080"
        android:foreground="@drawable/bt_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        />

    <Button
        android:id="@+id/bStop"
        android:layout_width="99dp"
        android:layout_height="81dp"
        android:backgroundTint="#0000FF"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bBack"
        android:layout_width="101dp"
        android:layout_height="114dp"
        android:backgroundTint="#0000FF"
        android:text="@string/backwards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bStop"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/bLeft"
        android:layout_width="107dp"
        android:layout_height="78dp"
        android:backgroundTint="#0000FF"
        android:text="@string/left"
        app:layout_constraintBottom_toBottomOf="@+id/bStop"
        app:layout_constraintEnd_toStartOf="@+id/bStop"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bStop"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bRight"
        android:layout_width="108dp"
        android:layout_height="74dp"
        android:backgroundTint="#0000FF"
        android:text="@string/right"
        app:layout_constraintBottom_toBottomOf="@+id/bStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toEndOf="@+id/bStop"
        app:layout_constraintTop_toTopOf="@+id/bStop"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/bForward"
        android:layout_width="98dp"
        android:layout_height="113dp"
        android:backgroundTint="#0000FF"
        android:text="@string/forward"
        app:layout_constraintBottom_toTopOf="@+id/bStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />

    <TextView
        android:id="@+id/data"
        android:layout_width="130dp"
        android:layout_height="47dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="606dp"
        android:text="Conectando..."
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>